--- a/articles/er-evaluation-models/er-general.bib
+++ b/articles/er-evaluation-models/er-general.bib
@@ -93,6 +93,38 @@
  year = {1959}
 }
 
+@article{kruskal1956,
+  title={On the shortest spanning subtree of a graph and the traveling salesman problem},
+  author={Kruskal, Joseph B},
+  journal={Proceedings of the American Mathematical society},
+  volume={7},
+  number={1},
+  pages={48--50},
+  year={1956}
+}
+
+@article{hopcroft1973set,
+  title={Set merging algorithms},
+  author={Hopcroft, John E. and Ullman, Jeffrey D.},
+  journal={SIAM Journal on Computing},
+  volume={2},
+  number={4},
+  pages={294--303},
+  year={1973},
+  publisher={SIAM}
+}
+
+@article{unionfind1964,
+  title={An improved equivalence algorithm},
+  author={Galler, Bernard A and Fisher, Michael J},
+  journal={Communications of the ACM},
+  volume={7},
+  number={5},
+  pages={301--303},
+  year={1964},
+  publisher={ACM New York, NY, USA}
+}
+
 @book{hoffman1971linear,
   title={Linear algebra},
   author={Hoffman, Kenneth},
