--- a/articles/er-evaluation-models/er-related-work.bib
+++ b/articles/er-evaluation-models/er-related-work.bib
@@ -16,7 +16,6 @@ year = {1969},
 volume = {64},
 pages = {1183-1210}
 }
-
 @article{tancredi2011fsmcrit,
   title={A hierarchical Bayesian approach to record linkage and population size problems},
   author={Tancredi, Andrea and Liseo, Brunero},
@@ -216,4 +215,11 @@ publisher={The Australian National University}
   pages={193--218},
   year={1985},
   publisher={Springer}
+}
+
+@inproceedings{draisbach2013choosing,
+  title={On choosing thresholds for duplicate detection.},
+  author={Draisbach, Uwe and Naumann, Felix},
+  booktitle={ICIQ},
+  year={2013}
 }
